Simplifying check for type existence, fixing bug with explicit imports.